--- a/index.html
+++ b/index.html
@@ -1,8 +1,20 @@
 <!DOCTYPE>
 <html>
-<header>
-</header>
+<head>
+    <meta charset='UTF-8'/>
+    <title>Danielle's Webpage</title>
+    <link href='styles.css' rel='stylesheet'/>
+    <meta name="description" content="practice website html css"
+</head>
   <body>
+    <header>
+      <a><image src="images/logo.svg"></a>
+      <ul>
+        <li><a href="products.asp">Products</a></li>
+        <li><a href="services.asp">Services</a></li>
+        <li><a href="about.asp">About</a></li>
+        <li><a href="contact.asp">Contact</a></li>
+      </ul>
+    </header>
   </body>
 </html>
-     
