--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
   <body>
     <header>
       <a><image src="images/logo.svg"></a>
-      <ul>
-        <li><a href="products.asp">Products</a></li>
-        <li><a href="services.asp">Services</a></li>
-        <li><a href="about.asp">About</a></li>
-        <li><a href="contact.asp">Contact</a></li>
-      </ul>
+      <nav>
+        <ul>
+          <li><a href="products.asp">Products</a></li>
+          <li><a href="services.asp">Services</a></li>
+          <li><a href="about.asp">About</a></li>
+          <li><a href="contact.asp">Contact</a></li>
+        </ul>
+      </nav>
     </header>
   </body>
 </html>
