header fixes_add button features

--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE>
-<html>
-<head>
+<html lang="en-US">
+  <head>
     <meta charset='UTF-8'/>
     <title>Danielle's Webpage</title>
     <link href='styles.css' rel='stylesheet'/>
     <meta name="description" content="practice website html css"
-</head>
+  </head>
   <body>
     <header>
-      <a><image src="images/logo.svg"></a>
+      <a href="/">
+        <image src="images/logo.svg">
+      </a>
       <nav>
         <ul>
-          <li><a href="products.asp">Products</a></li>
-          <li><a href="services.asp">Services</a></li>
-          <li><a href="about.asp">About</a></li>
-          <li><a href="contact.asp">Contact</a></li>
+          <li><a href="#">Products</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
       </nav>
     </header>
