--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset='UTF-8'/>
     <title>Danielle's Webpage</title>
     <link href='styles.css' rel='stylesheet'/>
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:700" rel="stylesheet">
     <meta name="description" content="practice website html css"
   </head>
   <body>
@@ -20,5 +21,8 @@
         </ul>
       </nav>
     </header>
+    <div id="title" class="background">
+      <h1>Hello World!</h1>
+    </div>
   </body>
 </html>
