--- a/index.html
+++ b/index.html
@@ -21,8 +21,36 @@
         </ul>
       </nav>
     </header>
-    <div id="title" class="background">
+    <section>
       <h1>Hello World!</h1>
-    </div>
+    </section>
+    <main>
+      <div>
+        <p>HTML is the unifying language of the World Wide Web.
+          Using just the simple tags it contains, the human race
+          has created an astoundingly diverse network of hyperlinked
+          documents, from Amazon, eBay, and Wikipedia, to personal
+          blogs and websites dedicated to cats that look like Hitler.
+          ---Jeremy Keith
+          </p>
+      </div>
+      <div>
+        <p>CSS isn’t easy. Combining a very permissive (somewhat broken)
+          syntax with constantly evolving features and rendering inconsistencies
+          makes CSS not that easy at all. Yes, the syntax is simple, but a
+          simple syntax doesn’t make an easy language.
+          ---Hugo Giraudel
+        </p>
+      <div/>
+      <div>
+        <p>I am not content, nor should you be, at stopping once something just
+           works, and not really knowing why. I gently challenge you to journey
+           down that bumpy "road less traveled" and embrace all that JavaScript
+           is and can do. With that knowledge, no technique, no framework, no
+           popular buzzword acronym of the week, will be beyond your understanding.
+           ---Kyle Simpson
+         </p>
+      </div>
+    </main>
   </body>
 </html>
