--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
     </section>
     <main>
       <div>
+        <a>
+          <image src="images/html-5.svg">
+        </a>
+        <h2>HTML</h2>
         <p>HTML is the unifying language of the World Wide Web.
           Using just the simple tags it contains, the human race
           has created an astoundingly diverse network of hyperlinked
@@ -35,6 +39,10 @@
           </p>
       </div>
       <div>
+        <a>
+          <image src="images/css-3.svg">
+        </a>
+        <h2>CSS</h2>
         <p>CSS isn’t easy. Combining a very permissive (somewhat broken)
           syntax with constantly evolving features and rendering inconsistencies
           makes CSS not that easy at all. Yes, the syntax is simple, but a
@@ -42,7 +50,10 @@
           ---Hugo Giraudel
         </p>
       <div/>
-      <div>
+      <div><a>
+        <image src="images/javascript.svg">
+      </a>
+        <h2>JS</h2>
         <p>I am not content, nor should you be, at stopping once something just
            works, and not really knowing why. I gently challenge you to journey
            down that bumpy "road less traveled" and embrace all that JavaScript
