--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
           simple syntax doesn’t make an easy language.
           ---Hugo Giraudel
         </p>
-      <div/>
-      <div><a>
+      </div>
+      <div>
+        <a>
         <image src="images/javascript.svg">
-      </a>
+        </a>
         <h2>JS</h2>
         <p>I am not content, nor should you be, at stopping once something just
            works, and not really knowing why. I gently challenge you to journey
